[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/Bush.png" type="Texture" id=1]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://HitBoxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Bush.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 6.0

[node name="Bush" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 8

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HurtBox"]
